--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.10.2",
     "sass": "^1.69.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+
   },
   "scripts": {
     "start": "react-scripts start",
